swap mandrill for sparkpost

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==0.10.1
 -e git://github.com/flask-admin/flask-admin.git@beb384268c65b4699ca740c1eb064897af95873b#egg=Flask_Admin-dev
 Flask-Login==0.2.11
-Flask-Mandrill==0.2
+sparkpost==1.2.0
 Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
 Jinja2==2.7.3
